# golden-repo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
deploy/: docker-compose.yaml
src/api/: Dockerfile  pyproject.toml
src/api/golden/api/: configuration.py  main.py
src/payments/: Dockerfile  pyproject.toml
src/payments/golden/payments/: configuration.py  main.py
src/shared/microservices_schemas/: pyproject.toml
src/shared/microservices_schemas/golden/microservice_schemas/: __init__.py  payments.py
src/webui/: Dockerfile  Makefile  README.md  pyproject.toml
src/webui/golden/webui/: configuration.py  main.py
