[project]
name = "golden-webui"
version = "0.1.0"
description = "Web Interface for interaction with the system"
readme = "README.md"

authors = [
    {name = "Neprin Team"}
]
maintainers = [
    {name = "Mikhail Neprin", email = "archemich@gmail.com"}
]

requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "streamlit>=1.47.1",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "golden.webui"
module-root = ""
namespace = true
