[project]
name = "golden-microservice-schemas"
version = "0.1.0"
description = "API for interaction with the system"
readme = "README.md"

authors = [
    {name = "Neprin Team"}
]
maintainers = [
    {name = "Mikhail Neprin", email = "archemich@gmail.com"}
]

requires-python = ">=3.13"
dependencies = [
    "pydantic"
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "golden.microservice_schemas"
module-root = ""
namespace = true
